<resources>
    <string name="app_name">Streaming App</string>

    // fragment_add_song
    <string name="fragment_add_song_title">Add Favorite</string>
    <string name="add_song_error_message">Please add title, artist, and url to save.</string>
    <string name="add_song_url_error_message">Please use a valid url.</string>

    <string name="hint_song_title">Song Title - Crawling</string>
    <string name="hint_song_artist">Song Artist - Linkin Park</string>
    <string name="hint_song_url"> Song url - https://www.youtube.com/watch?v=sjN-NGsRg9g</string>

    <string name="menu_add_song">Favorite</string>
    <string name="menu_delete_all_songs">Delete all songs.</string>

    <string name="delete_message">Song deleted</string>

    <string name="url_load_error_message">Sorry that url failed to load.</string>

</resources>
